# CompMath

./: .gitignore  CMakeLists.txt
include/controllers/: calc.hpp
include/models/: data.hpp
include/views/: main_interface.hpp  nav_bar.hpp  object_manager.hpp  plot.hpp
src/: CMakeLists.txt  main.cpp
src/controllers/: CMakeLists.txt  calc.cpp
src/models/: CMakeLists.txt  data.cpp
src/views/: CMakeLists.txt  main_interface.cpp  nav_bar.cpp  plot.cpp
